examples/test/testpolicy901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy901
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key38: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value12
          key14: value31
      podSelector:
        matchLabels:
          key8: value1
          key33: value32
